// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timeline /> renders correctly 1`] = `
<div
  className="timeline"
>
  <div
    className="vertical-axis"
  >
    <div
      className="room-axis-wrapper"
      key="2"
    >
      <div
        className="room-name item-row"
      >
        <div>
          Menegagai
        </div>
        <div
          className="ellipsis"
          onBlur={[Function]}
          onFocus={[Function]}
          role="button"
          tabIndex="0"
        >
          …
          <div
            className="mark-unavailable is-hidden"
          >
            <div>
              <div
                className="container_room_fine"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              />
            </div>
            <span>
              Unavailable
            </span>
          </div>
        </div>
      </div>
      <div
        className="bed-name item-row"
        key="1"
      >
        <div>
          Bed 2
        </div>
      </div>
    </div>
  </div>
  <div
    className="timeline__body__header"
  >
    <div
      className="timeline-period-selector selector"
    >
      <span
        className="timeline-period value"
      >
        January 2019
      </span>
      <div
        className="timeline-navigator"
      >
        <div
          className="timeline-navigator--previous"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          style={
            Object {
              "cursor": "pointer",
              "outline": "none",
            }
          }
          tabIndex="0"
        >
          <img
            alt="dd"
            src="dropdown_active.svg"
          />
        </div>
        <div
          className="timeline-navigator--next"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          style={
            Object {
              "cursor": "pointer",
              "outline": "none",
            }
          }
          tabIndex="0"
        >
          <img
            alt="dd"
            src="dropdown_active.svg"
          />
        </div>
      </div>
      <div
        className="go-to-today"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        Today
      </div>
    </div>
    <div
      className="timeline-view-type-selector selector"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      role="menu"
      tabIndex="0"
    >
      <span
        className="timeline-view-type value"
      >
        month
      </span>
      <div
        className="view-type-selector dropdown-icon"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
            "outline": "none",
          }
        }
        tabIndex="0"
      >
        <img
          alt="dd"
          src="dropdown_inactive.svg"
        />
      </div>
      <div
        className="timeline-view-choices choices-inactive"
      >
        <div
          className="timeline-view-choice week"
          key="week"
          onClick={[Function]}
          role="presentation"
        >
          Week
        </div>
        <div
          className="timeline-view-choice month"
          key="month"
          onClick={[Function]}
          role="presentation"
        >
          Month
        </div>
        <div
          className="timeline-view-choice year"
          key="year"
          onClick={[Function]}
          role="presentation"
        >
          Year
        </div>
      </div>
    </div>
  </div>
  <div
    className="timeline__body"
  >
    <div
      className="timeline__body-segments"
    >
      <div
        className="timeline__segment  month-view"
        data-segment-label="1"
        key="0"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="2"
        key="1"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="3"
        key="2"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="4"
        key="3"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="5"
        key="4"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="6"
        key="5"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="7"
        key="6"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="8"
        key="7"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="9"
        key="8"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="10"
        key="9"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="11"
        key="10"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="12"
        key="11"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="13"
        key="12"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="14"
        key="13"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="15"
        key="14"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="16"
        key="15"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="17"
        key="16"
      />
      <div
        className="timeline__segment current month-view"
        data-segment-label="18"
        key="17"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="19"
        key="18"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="20"
        key="19"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="21"
        key="20"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="22"
        key="21"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="23"
        key="22"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="24"
        key="23"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="25"
        key="24"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="26"
        key="25"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="27"
        key="26"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="28"
        key="27"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="29"
        key="28"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="30"
        key="29"
      />
      <div
        className="timeline__segment  month-view"
        data-segment-label="31"
        key="30"
      />
      <div
        className="rooms-geometry-wrapper"
      >
        <div
          className="room-geometry-wrapper"
        >
          <div
            className="room-status-bar item-row"
          />
          <div
            className="bed-geometry-wrapper item-row"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="overlay visible  overlayBackground"
    onClick={null}
    onKeyPress={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="modal visible change-room-modal"
      id=""
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      style={
        Object {
          "maxWidth": "",
        }
      }
      tabIndex="0"
    >
      <div
        className="modal-title-bar"
      >
        <div
          className="modal-title-text"
        >
          <div
            className="modal-title"
          >
            Re-assign Room
          </div>
          <div
            className="lable-text modal-bar"
          >
            <div />
          </div>
        </div>
        <button
          className="modal-close"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="close"
            src="close.svg"
          />
        </button>
      </div>
      <div
        className="modal-content"
        id=""
      >
        <form
          className="change-room-modal__form"
        >
          <div
            className="change-room-modal__other-available-room"
          >
            <div
              className="change-room-modal__text-center"
            >
              No beds are available
            </div>
          </div>
          <p
            className="change-room-modal__reason"
          >
            Reason
            <span
              className="change-room-modal__important-text"
            >
              *
            </span>
          </p>
          <textarea
            className="change-room-modal__input"
            name="changeReason"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="change-room-modal__disclaimer"
          >
            <img
              alt="caution icon"
              src="error_24px.svg"
            />
            <span>
              <strong>
                Requester
              </strong>
               will be automatically notified of the room change.
            </span>
          </div>
          <div
            className="change-room-modal__hr"
          />
          <div
            className="change-room-modal__footer"
          >
            <div>
              <button
                className="change-room-modal__footer--cancel"
                onClick={[Function]}
                type="button"
              >
                Cancel
              </button>
              <button
                className="change-room-modal__footer--save-disabled"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                Save Changes
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Timeline /> renders the weekly view correctly 1`] = `
<div
  className="timeline"
>
  <div
    className="vertical-axis"
  >
    <div
      className="room-axis-wrapper"
      key="2"
    >
      <div
        className="room-name item-row"
      >
        <div>
          Menegagai
        </div>
        <div
          className="ellipsis"
          onBlur={[Function]}
          onFocus={[Function]}
          role="button"
          tabIndex="0"
        >
          …
          <div
            className="mark-unavailable is-hidden"
          >
            <div>
              <div
                className="container_room_fine"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              />
            </div>
            <span>
              Unavailable
            </span>
          </div>
        </div>
      </div>
      <div
        className="bed-name item-row"
        key="1"
      >
        <div>
          Bed 2
        </div>
      </div>
    </div>
  </div>
  <div
    className="timeline__body__header"
  >
    <div
      className="timeline-period-selector selector"
    >
      <span
        className="timeline-period value"
      >
        1 - 5 Jan 2019
      </span>
      <div
        className="timeline-navigator"
      >
        <div
          className="timeline-navigator--previous"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          style={
            Object {
              "cursor": "pointer",
              "outline": "none",
            }
          }
          tabIndex="0"
        >
          <img
            alt="dd"
            src="dropdown_active.svg"
          />
        </div>
        <div
          className="timeline-navigator--next"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          style={
            Object {
              "cursor": "pointer",
              "outline": "none",
            }
          }
          tabIndex="0"
        >
          <img
            alt="dd"
            src="dropdown_active.svg"
          />
        </div>
      </div>
      <div
        className="go-to-today"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        Today
      </div>
    </div>
    <div
      className="timeline-view-type-selector selector"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      role="menu"
      tabIndex="0"
    >
      <span
        className="timeline-view-type value"
      >
        week
      </span>
      <div
        className="view-type-selector dropdown-icon"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
            "outline": "none",
          }
        }
        tabIndex="0"
      >
        <img
          alt="dd"
          src="dropdown_inactive.svg"
        />
      </div>
      <div
        className="timeline-view-choices choices-inactive"
      >
        <div
          className="timeline-view-choice week"
          key="week"
          onClick={[Function]}
          role="presentation"
        >
          Week
        </div>
        <div
          className="timeline-view-choice month"
          key="month"
          onClick={[Function]}
          role="presentation"
        >
          Month
        </div>
        <div
          className="timeline-view-choice year"
          key="year"
          onClick={[Function]}
          role="presentation"
        >
          Year
        </div>
      </div>
    </div>
  </div>
  <div
    className="timeline__body"
  >
    <div
      className="timeline__body-segments"
    >
      <div
        className="timeline__segment  week-view"
        data-segment-label="Tue 1/1"
        key="0"
      />
      <div
        className="timeline__segment  week-view"
        data-segment-label="Wed 1/2"
        key="1"
      />
      <div
        className="timeline__segment  week-view"
        data-segment-label="Thu 1/3"
        key="2"
      />
      <div
        className="timeline__segment  week-view"
        data-segment-label="Fri 1/4"
        key="3"
      />
      <div
        className="timeline__segment  week-view"
        data-segment-label="Sat 1/5"
        key="4"
      />
      <div
        className="timeline__segment  week-view"
        data-segment-label="Sun 1/6"
        key="5"
      />
      <div
        className="timeline__segment  week-view"
        data-segment-label="Mon 1/7"
        key="6"
      />
      <div
        className="rooms-geometry-wrapper"
      >
        <div
          className="room-geometry-wrapper"
        >
          <div
            className="room-status-bar item-row"
          />
          <div
            className="bed-geometry-wrapper item-row"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="overlay visible  overlayBackground"
    onClick={null}
    onKeyPress={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="modal visible change-room-modal"
      id=""
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      style={
        Object {
          "maxWidth": "",
        }
      }
      tabIndex="0"
    >
      <div
        className="modal-title-bar"
      >
        <div
          className="modal-title-text"
        >
          <div
            className="modal-title"
          >
            Re-assign Room
          </div>
          <div
            className="lable-text modal-bar"
          >
            <div />
          </div>
        </div>
        <button
          className="modal-close"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="close"
            src="close.svg"
          />
        </button>
      </div>
      <div
        className="modal-content"
        id=""
      >
        <form
          className="change-room-modal__form"
        >
          <div
            className="change-room-modal__other-available-room"
          >
            <div
              className="change-room-modal__text-center"
            >
              No beds are available
            </div>
          </div>
          <p
            className="change-room-modal__reason"
          >
            Reason
            <span
              className="change-room-modal__important-text"
            >
              *
            </span>
          </p>
          <textarea
            className="change-room-modal__input"
            name="changeReason"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="change-room-modal__disclaimer"
          >
            <img
              alt="caution icon"
              src="error_24px.svg"
            />
            <span>
              <strong>
                Requester
              </strong>
               will be automatically notified of the room change.
            </span>
          </div>
          <div
            className="change-room-modal__hr"
          />
          <div
            className="change-room-modal__footer"
          >
            <div>
              <button
                className="change-room-modal__footer--cancel"
                onClick={[Function]}
                type="button"
              >
                Cancel
              </button>
              <button
                className="change-room-modal__footer--save-disabled"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                Save Changes
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Timeline /> renders the year view correctly 1`] = `
<div
  className="timeline"
>
  <div
    className="vertical-axis"
  >
    <div
      className="room-axis-wrapper"
      key="2"
    >
      <div
        className="room-name item-row"
      >
        <div>
          Menegagai
        </div>
        <div
          className="ellipsis"
          onBlur={[Function]}
          onFocus={[Function]}
          role="button"
          tabIndex="0"
        >
          …
          <div
            className="mark-unavailable is-hidden"
          >
            <div>
              <div
                className="container_room_fine"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              />
            </div>
            <span>
              Unavailable
            </span>
          </div>
        </div>
      </div>
      <div
        className="bed-name item-row"
        key="1"
      >
        <div>
          Bed 2
        </div>
      </div>
    </div>
  </div>
  <div
    className="timeline__body__header"
  >
    <div
      className="timeline-period-selector selector"
    >
      <span
        className="timeline-period value"
      >
        2019
      </span>
      <div
        className="timeline-navigator"
      >
        <div
          className="timeline-navigator--previous"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          style={
            Object {
              "cursor": "pointer",
              "outline": "none",
            }
          }
          tabIndex="0"
        >
          <img
            alt="dd"
            src="dropdown_active.svg"
          />
        </div>
        <div
          className="timeline-navigator--next"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="button"
          style={
            Object {
              "cursor": "pointer",
              "outline": "none",
            }
          }
          tabIndex="0"
        >
          <img
            alt="dd"
            src="dropdown_active.svg"
          />
        </div>
      </div>
      <div
        className="go-to-today"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex="-1"
      >
        Today
      </div>
    </div>
    <div
      className="timeline-view-type-selector selector"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyUp={[Function]}
      role="menu"
      tabIndex="0"
    >
      <span
        className="timeline-view-type value"
      >
        year
      </span>
      <div
        className="view-type-selector dropdown-icon"
        onClick={[Function]}
        onKeyUp={[Function]}
        role="button"
        style={
          Object {
            "cursor": "pointer",
            "outline": "none",
          }
        }
        tabIndex="0"
      >
        <img
          alt="dd"
          src="dropdown_inactive.svg"
        />
      </div>
      <div
        className="timeline-view-choices choices-inactive"
      >
        <div
          className="timeline-view-choice week"
          key="week"
          onClick={[Function]}
          role="presentation"
        >
          Week
        </div>
        <div
          className="timeline-view-choice month"
          key="month"
          onClick={[Function]}
          role="presentation"
        >
          Month
        </div>
        <div
          className="timeline-view-choice year"
          key="year"
          onClick={[Function]}
          role="presentation"
        >
          Year
        </div>
      </div>
    </div>
  </div>
  <div
    className="timeline__body"
  >
    <div
      className="timeline__body-segments"
    >
      <div
        className="timeline__segment current year-view"
        data-segment-label="Jan"
        key="0"
      />
      <div
        className="timeline__segment  year-view"
        data-segment-label="Feb"
        key="1"
      />
      <div
        className="timeline__segment  year-view"
        data-segment-label="Mar"
        key="2"
      />
      <div
        className="timeline__segment  year-view"
        data-segment-label="Apr"
        key="3"
      />
      <div
        className="timeline__segment  year-view"
        data-segment-label="May"
        key="4"
      />
      <div
        className="timeline__segment  year-view"
        data-segment-label="Jun"
        key="5"
      />
      <div
        className="timeline__segment  year-view"
        data-segment-label="Jul"
        key="6"
      />
      <div
        className="timeline__segment  year-view"
        data-segment-label="Aug"
        key="7"
      />
      <div
        className="timeline__segment  year-view"
        data-segment-label="Sep"
        key="8"
      />
      <div
        className="timeline__segment  year-view"
        data-segment-label="Oct"
        key="9"
      />
      <div
        className="timeline__segment  year-view"
        data-segment-label="Nov"
        key="10"
      />
      <div
        className="timeline__segment  year-view"
        data-segment-label="Dec"
        key="11"
      />
      <div
        className="rooms-geometry-wrapper"
      >
        <div
          className="room-geometry-wrapper"
        >
          <div
            className="room-status-bar item-row"
          />
          <div
            className="bed-geometry-wrapper item-row"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="overlay visible  overlayBackground"
    onClick={null}
    onKeyPress={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="modal visible change-room-modal"
      id=""
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      style={
        Object {
          "maxWidth": "",
        }
      }
      tabIndex="0"
    >
      <div
        className="modal-title-bar"
      >
        <div
          className="modal-title-text"
        >
          <div
            className="modal-title"
          >
            Re-assign Room
          </div>
          <div
            className="lable-text modal-bar"
          >
            <div />
          </div>
        </div>
        <button
          className="modal-close"
          onClick={[Function]}
          type="button"
        >
          <img
            alt="close"
            src="close.svg"
          />
        </button>
      </div>
      <div
        className="modal-content"
        id=""
      >
        <form
          className="change-room-modal__form"
        >
          <div
            className="change-room-modal__other-available-room"
          >
            <div
              className="change-room-modal__text-center"
            >
              No beds are available
            </div>
          </div>
          <p
            className="change-room-modal__reason"
          >
            Reason
            <span
              className="change-room-modal__important-text"
            >
              *
            </span>
          </p>
          <textarea
            className="change-room-modal__input"
            name="changeReason"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="change-room-modal__disclaimer"
          >
            <img
              alt="caution icon"
              src="error_24px.svg"
            />
            <span>
              <strong>
                Requester
              </strong>
               will be automatically notified of the room change.
            </span>
          </div>
          <div
            className="change-room-modal__hr"
          />
          <div
            className="change-room-modal__footer"
          >
            <div>
              <button
                className="change-room-modal__footer--cancel"
                onClick={[Function]}
                type="button"
              >
                Cancel
              </button>
              <button
                className="change-room-modal__footer--save-disabled"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                Save Changes
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
